# snes-maker

./: .gitignore  Cargo.toml  FEATURE-IMPROVEMENTS.md  FEATURES-CONTRA.md  FEATURES.md  README.md
crates/snesmaker-assets/: Cargo.toml
crates/snesmaker-assets/src/: lib.rs
crates/snesmaker-cli/: Cargo.toml
crates/snesmaker-cli/src/: main.rs
crates/snesmaker-editor/: Cargo.toml
crates/snesmaker-editor/src/: animation_editor.rs  asset_browser.rs  autotile.rs  diagnostics_panel.rs  event_editor.rs  import_panel.rs  main.rs  outliner_panel.rs  playtest_panel.rs  scene_canvas.rs  workspace.rs
crates/snesmaker-events/: Cargo.toml
crates/snesmaker-events/src/: lib.rs
crates/snesmaker-export/: Cargo.toml
crates/snesmaker-export/src/: lib.rs
crates/snesmaker-platformer/: Cargo.toml
crates/snesmaker-platformer/src/: lib.rs
crates/snesmaker-project/: Cargo.toml
crates/snesmaker-project/src/: lib.rs
crates/snesmaker-validator/: Cargo.toml
crates/snesmaker-validator/src/: lib.rs
docs/: architecture.html  architecture.md
examples/contra_like_demo/: README.md  project.toml
examples/contra_like_demo/content/animations/: player_idle.animation.ron
examples/contra_like_demo/content/dialogues/: mission_briefing.dialogue.ron
examples/contra_like_demo/content/metasprites/: attack_dog.metasprite.ron  blast_gate.metasprite.ron  bunker_turret.metasprite.ron  gate_switch.metasprite.ron  jungle_grunt.metasprite.ron  player_idle.metasprite.ron  player_idle_burst.metasprite.ron  player_shot.metasprite.ron  ration_pack.metasprite.ron  sandbag_wall.metasprite.ron  supply_crate.metasprite.ron
examples/contra_like_demo/content/palettes/: contra_palette.palette.ron
examples/contra_like_demo/content/scenes/: jungle_assault.scene.ron
examples/contra_like_demo/content/tilesets/: contra_tiles.tileset.ron
examples/megaman_like_demo/: project.toml
examples/megaman_like_demo/.snesmaker/: editor-workspace.ron
examples/megaman_like_demo/content/animations/: player_idle.animation.ron
examples/megaman_like_demo/content/dialogues/: intro.dialogue.ron
examples/megaman_like_demo/content/metasprites/: blast_door.metasprite.ron  floor_switch.metasprite.ron  guide_bot.metasprite.ron  met_enemy.metasprite.ron  player.metasprite.ron  player_idle.metasprite.ron  player_idle_blink.metasprite.ron  player_shot.metasprite.ron  small_health_pickup.metasprite.ron
examples/megaman_like_demo/content/palettes/: default.palette.ron  default_palette.palette.ron
examples/megaman_like_demo/content/scenes/: intro_stage.scene.ron
examples/megaman_like_demo/content/tilesets/: default.tileset.ron  default_tiles.tileset.ron
runtime/snes/: main.s
