[workspace]
members = [
    "crates/snesmaker-assets",
    "crates/snesmaker-cli",
    "crates/snesmaker-editor",
    "crates/snesmaker-events",
    "crates/snesmaker-export",
    "crates/snesmaker-platformer",
    "crates/snesmaker-project",
    "crates/snesmaker-validator",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
